--- a/primerversion.html
+++ b/primerversion.html
@@ -7,6 +7,8 @@
             un gran número de archivos de código fuente, es decir Git nos proporciona las herramientas para desarrollar un trabajo en equipo de manera
             inteligente y rápida y por trabajo nos referimos a algún software o página que implique código el cual necesitemos hacerlo con un grupo
             de personas
-        </p>
+        </p>    
+        <p>Los sistemas de control de versiones distribuidos salvan este problema. Algunos ejemplos de sistemas distribuidos, aparte de Git, son Mercurial, Bazaar, o Darcs. En este tipo de 
+        herramientas, los cliente replican completamente el preositorio.</p>
     </body>
 </HTML>
